<resources>
    <string name="app_name">jRAT</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_guest">Sign in as guest</string>
    <string name="action_sign_out">Sign out</string>
    <string name="anonymous_user">Anonymous User</string>

    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="anonymous_sign_in_failed">Unable to sign in anonymously</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>

    <string name="title_map">Rat Sighting Map</string>
    <string name="title_list">Rat Sighting List</string>
    <string name="title_report">Rat Sighting Report</string>
    <string name="title_detail">Rat Sighting Detail</string>
    <string name="title_add">Add Rat Sighting</string>
    <string name="title_pick_date">Select Date</string>
    <string name="title_pick_time">Select Time</string>

    <string name="label_address">Address</string>
    <string name="label_date">Date</string>
    <string name="label_location_type">Location Type</string>
    <string name="label_city">City</string>
    <string name="label_borough">Borough</string>
    <string name="label_zip">Zip Code</string>
    <string name="label_location">Location</string>

    <string name="action_filter">Filter</string>
    <string name="action_report">Add Sighting</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_map">Map</string>
    <string name="nav_list">List</string>
    <string name="nav_report">Report</string>
    <string name="title_activity_rat_sighting_google_map">Map</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="search">Search</string>
</resources>
